--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "json-server-slow": "json-server --delay=5000 --watch db.json --port 3001"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.3",
+    "@types/mdx": "^2.0.13",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "next-mdx-remote-client": "^2.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "json-server": "^0.17.4",
